fix: add top padding on mobile for better spacing

--- a/src/pages/Home/sections/Introduction.module.css
+++ b/src/pages/Home/sections/Introduction.module.css
@@ -163,6 +163,10 @@
     width: 200px;
     height: 200px;
   }
+
+  .intro {
+    padding-top: 4rem;
+  }
 }
 
 @keyframes fadeInScale {
